--- a/backend/src/main/resources/templates/lista_produtos.html
+++ b/backend/src/main/resources/templates/lista_produtos.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h2>Listagem de Produtos (Nova versão com o Frontend)</h2>
+			<h2>Listagem de Produtos</h2>
 			<hr>
 			<a href="/incluir_produto">Incluir um novo produto</a>
 			<br>
